--- a/accsets/css/style.css
+++ b/accsets/css/style.css
@@ -30,17 +30,33 @@ a {
   display: inline-block;
   min-width: 205px;
   line-height: 60px;
-  border-radius: 30px;
   background: #2e80ce;
   color: #fff;
   text-align: center;
   font-size: 1.8rem;
+  font-style: normal;
   font-weight: 400;
-  line-height: 1.67;
+  border-radius: 999px;
 }
 
 .btn:hover {
   opacity: 0.9;
+}
+
+.section-heading {
+  color: #10375c;
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+
+.section-desc {
+  margin-top: 18px;
+  color: #575f66;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.67;
 }
 
 /* ===============header=============== */
@@ -115,7 +131,6 @@ a {
 .hero__heading {
   color: #fff;
   font-size: 7rem;
-  font-style: normal;
   font-weight: 600;
   line-height: 1.14;
   letter-spacing: -1.4px;
@@ -125,7 +140,6 @@ a {
   margin-top: 22px;
   color: #c9d2da;
   font-size: 1.8rem;
-  font-style: normal;
   font-weight: 300;
   line-height: 1.67;
 }
@@ -150,7 +164,7 @@ a {
   justify-content: flex-end;
 }
 
-.hero__img{
+.hero__img {
   object-fit: cover;
   border-radius: 6px;
 }
@@ -165,4 +179,86 @@ a {
 .hero__img--small {
   width: 210px;
   height: 410px;
+}
+
+/* ===============service=============== */
+.service {
+  padding: 170px 0;
+  background: #fff;
+}
+
+.service__heading,
+.service__desc {
+  text-align: center;
+}
+
+.service__desc {
+  margin: 18px auto 0 ;
+  width: 468px;
+}
+
+.service__row {
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.service__img {
+  width: 570px;
+  height: 570px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.service-item {
+  padding: 21px;
+  display: flex;
+  width: 470px;
+  border-radius: 10px;
+  background: #fff;
+  transition: 0.25s;
+}
+
+.service-item:hover {
+  position: relative;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+
+.service-item:hover .service-item__icon {
+  color: #fff;
+  background: #2e80ce;
+}
+
+.service-item__icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background: #eff6fd;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  margin-right: 19px;
+  transition: 0.25s;
+}
+
+.service-item__heading {
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.service-item__desc {
+  margin-top: 8px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+
+.service__btn {
+  margin-top: 55px;
 }
