--- a/accsets/css/style.css
+++ b/accsets/css/style.css
@@ -193,7 +193,7 @@ a {
 }
 
 .service__desc {
-  margin: 18px auto 0 ;
+  margin: 18px auto 0;
   width: 468px;
 }
 
@@ -261,4 +261,64 @@ a {
 
 .service__btn {
   margin-top: 55px;
+}
+
+/* ===============service=============== */
+.work {
+  background: #f6fbff;
+  padding: 100px 0;
+}
+
+.work__desc {
+  width: 468px;
+}
+
+.work__list {
+  margin-top: 86px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+
+.work-item {
+  padding: 43px;
+  border-radius: 4px;
+  background: #fff;
+  border: 16px solid #eaf6ff;
+  transition: 0.25s;
+}
+
+.work-item:hover {
+  border-color: #2e80ce;
+  transform: translateY(-16px);
+}
+
+.work-item__heading {
+  margin-top: 18px;
+  color: #10375c;
+  font-size: 2.6rem;
+  font-weight: 600;
+  line-height: 1.38;
+}
+
+.work-item__desc {
+  margin-top: 28px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+
+.work-item__more {
+  margin-top: 18px;
+  color: #2e80ce;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75;
+}
+
+.work-item__icon {
+  width: 72px;
+  height: 72px;
+  flex-shrink: 0;
 }
