--- a/accsets/css/style.css
+++ b/accsets/css/style.css
@@ -263,7 +263,7 @@ a {
   margin-top: 55px;
 }
 
-/* ===============service=============== */
+/* ===============work=============== */
 .work {
   background: #f6fbff;
   padding: 100px 0;
@@ -321,4 +321,51 @@ a {
   width: 72px;
   height: 72px;
   flex-shrink: 0;
+}
+
+/* ===============about=============== */
+.about {
+  margin-top: 85px;
+  padding: 85px 0 206px;
+}
+
+.about-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about__media {
+  width: 49%;
+}
+
+.about-content {
+  width: 40%;
+}
+
+.about__img {
+  position: relative;
+}
+
+.about__img--big {
+  display: flex;
+  object-fit: cover;
+  width: 512px;
+  height: 370px;
+  border-radius: 6px;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.07);
+}
+
+.about__img--small {
+  position: absolute;
+  top: 121px;
+  left: 238px;
+  object-fit: cover;
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+}
+
+.about-content__btn{
+  margin-top: 38px;
 }
