--- a/accsets/css/respossive.css
+++ b/accsets/css/respossive.css
@@ -1,5 +1,8 @@
 /* PC */
 @media (min-width: 992px) {
+    .mobile-header{
+        display: none;
+    }
 }
 
 /* tablet & mobile */
@@ -28,7 +31,7 @@
   }
 
   /* 4. Overplay */
-  .menu-overplay{
+  .menu-overplay {
     position: fixed;
     background: rgba(0, 0, 0, 0.3);
     inset: 0;
@@ -40,9 +43,47 @@
   }
 
   /* 5. Triển khai nếu checkbox được check thì hiện overplay */
-  .menu-checkbox:checked ~ .menu-overplay{
+  .menu-checkbox:checked ~ .menu-overplay {
     opacity: 1;
     visibility: visible;
+  }
+  /* 6. code cho menu drawer */
+  .menu-drawer {
+    position: fixed;
+    background-color: #2e1919;
+    inset: 0 40% 0 0;
+    z-index: 2;
+    transform: translateX(-100%);
+    transition: 0.5s;
+    padding: 60px;
+  }
+  /* 7. Kiểm tra nếu checkbox được check hiện menu */
+  .menu-checkbox:checked ~ .menu-drawer {
+    transform: translateX(0);
+  }
+  /* 8. Menu top */
+  .close__menu{
+    width: 24px;
+    color: #fff;
+  }
+
+  .menu-drawer__top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  #navbar__list--mobile{
+    margin-top: 25px;
+  }
+
+  .navbar__link{
+    display: block;
+    font-size: 2rem;
+  }
+
+  .navbar__link:hover{
+    background-color: #00ffff37;
   }
 }
 
@@ -55,6 +96,8 @@
 }
 
 /* tạm ẩn phần không liên quan */
-.hero, footer, main{
-    display: none;
+.hero,
+footer,
+main {
+  display: none;
 }
