code responsive: hero and service

--- a/accsets/css/respossive.css
+++ b/accsets/css/respossive.css
@@ -1,8 +1,8 @@
 /* PC */
 @media (min-width: 992px) {
-    .mobile-header{
-        display: none;
-    }
+  .mobile-header {
+    display: none;
+  }
 }
 
 /* tablet & mobile */
@@ -62,28 +62,70 @@
     transform: translateX(0);
   }
   /* 8. Menu top */
-  .close__menu{
+  .close__menu {
     width: 24px;
     color: #fff;
   }
 
-  .menu-drawer__top{
+  .menu-drawer__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  #navbar__list--mobile{
+  #navbar__list--mobile {
     margin-top: 25px;
   }
 
-  .navbar__link{
+  .navbar__link {
     display: block;
     font-size: 2rem;
   }
 
-  .navbar__link:hover{
+  .navbar__link:hover {
     background-color: #00ffff37;
+  }
+  /* khối hero */
+  .hero {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+
+  .hero__content{
+    order: 2;
+  }
+
+  .hero__media{
+    order: 1;
+  }
+
+  .hero__content{
+    width: 80%;
+    text-align: center;
+    margin: 22px auto;
+  }
+
+  .hero__row{
+    justify-content: center;
+  }
+
+  /* Khối service */
+  .service__row{
+   flex-direction: column; 
+   row-gap: 20px;
+  }
+
+  .service__img{
+    width: 100%;
+  }
+
+  .service__list{
+    text-align: center;
+  }
+
+  .service-item{
+    width: 90%;
+    text-align: start;
   }
 }
 
@@ -96,8 +138,6 @@
 }
 
 /* tạm ẩn phần không liên quan */
-.hero,
-footer,
-main {
+footer {
   display: none;
 }
